test/testdata/classes/instance/missing_property_error.lox
class Foo {}

var foo = Foo();
// error: 'Foo' object has no property 'bar'
// lint warning: property 'bar' has not been declared or assigned anywhere
print foo.bar;
